Fix some alignment issues

--- a/packages/ui/lit-ui/src/dx-tag-picker/dx-tag-picker.pcss
+++ b/packages/ui/lit-ui/src/dx-tag-picker/dx-tag-picker.pcss
@@ -7,7 +7,8 @@
     @apply p-0 inline-flex;
 
     button {
-      @apply pli-2 plb-1;
+      @apply pli-2;
+      padding-block: var(--dx-tag-padding-block);
     }
 
     &[data-remove='true'] {
